# multi-agent-system

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  cell.cpp  cell.h  grid.cpp  grid.h  main.cpp
src/animal/: grass.cpp  grass.h  grid_animal.cpp  grid_animal.h  sheep.cpp  sheep.h
src/base/: grid.cpp  grid.h  menu.cpp  menu.h
src/cellular/: cell.cpp  cell.h  grid.cpp  grid.h  grid_cellular.cpp  grid_cellular.h
